<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
                tools:context=".AndroidAppsFragment">

    <com.google.android.gms.ads.AdView
        android:id="@+id/bannerAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8660578713934275/2923018290"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/softwareAndroid"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
ads:layout_constraintTop_toBottomOf="@+id/bannerAdd"
        ads:layout_constraintBottom_toTopOf="@+id/bottomBannerAdd"/>


    <com.google.android.gms.ads.AdView
        android:id="@+id/bottomBannerAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:nextFocusLeft="@+id/navigationButton"
        ads:layout_constraintBottom_toTopOf="@+id/prevAndroid"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8660578713934275/8737084773"/>


        <Button
            android:id="@+id/prevAndroid"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
                        android:focusable="true"
            android:text="@string/previous_page"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintBottom_toBottomOf="parent"/>

    <Spinner
        android:id="@+id/androidCategory"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:prompt="@string/category"
android:entries="@array/categories"
        android:focusable="true"
ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintStart_toEndOf="@+id/prevAndroid"
        ads:layout_constraintEnd_toStartOf="@+id/nextAndroid"/>

        <Button
            android:id="@+id/nextAndroid"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:focusable="true"
            android:text="@string/next_page"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>